--- a/html/weather-map.html
+++ b/html/weather-map.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <!--Custom CSS Stylesheet-->
-    <link rel="stylesheet" href="/css/weather-map-project.css">
+    <link rel="stylesheet" href="/css/weather-map.css">
 </head>
 <body>
 
@@ -120,6 +120,6 @@
 <script rel="script" src="/.gitignore/keys.js"></script>
 
 <!-- Custom JS Script: -->
-<script rel="stylesheet" src="/js/weather_map.js"></script>
+<script rel="stylesheet" src="/js/weather-map.js"></script>
 </body>
 </html>
